...

            IconButton(
                modifier = Modifier.size(48.dp),
                enabled = canPause,
                onClick = onPause,
            ) {
                Icon(Icons.Outlined.Pause, contentDescription = "暂停朗读")
            }
            IconButton(
                modifier = Modifier.size(48.dp),
                enabled = canResume,
                onClick = onResume,
            ) {
                Icon(Icons.Outlined.PlayArrow, contentDescription = "继续朗读")
            }
            IconButton(
                modifier = Modifier.size(48.dp),
                enabled = true,
                onClick = onStop,
            ) {
                Icon(Icons.Outlined.Stop, contentDescription = "停止朗读")
            }
        }
    }
}

